<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">汽车仁</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="product_price">￥%1$s</string>
    <string name="car_item_pp">品牌：%1$s</string>
    <string name="car_item_year">年份：%1$s</string>
    <string name="car_item_lc">已驾公里：%1$s</string>
    <string name="car_item_xl">系列：%1$s</string>
    <string name="car_item_pl">排量：%1$s</string>
    <string name="car_item_bypl">保养频率：%1$s</string>
    <string name="order_price">￥%1$s</string>
    <string name="product_time">约%1$s分钟</string>
    <string name="order_status_waiting">等待服务</string>
    <string name="order_status_accept">服务进行中</string>
    <string name="order_status_finish">服务完成</string>
    <string name="order_status_cancel">已取消</string>
    <string name="order_btn_finish">确认完成</string>
    <string name="order_btn_evaluate">评价订单</string>
    <string name="order_btn_delete">删除订单</string>
    <string name="order_btn_cancel">取消订单</string>
    <string name="evaluate_level_good">好评</string>
    <string name="evaluate_level_bad">差评</string>

    <!-- 储值卡 -->
    <string name="storecard_cash">可用金额：￥%1$s</string>
    <string name="storecard_num">卡片编号：%1$s</string>
    <string name="storecard_date">有效期：%1$s</string>
    <string name="storecard_price">价格：￥%1$s</string>
    <string name="storecard_worth">价值：￥%1$s</string>
    <string name="user_sex_man">%1$s先生</string>
    <string name="user_sex_woman">%1$s女士</string>
    <string name="user_credit">%1$s积分</string>
     <string name="coupon_use">优惠券(%1$s张可用)</string>
    <string name="sotrecard_use">增值卡(%1$s张可用)</string>
     <string name="cleancard_use">储值卡(%1$s张可用)</string>
    <string name="sys_about">关于我们</string>
    <string name="sys_service">服务条款</string>

</resources>