<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/scard_top_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/storecard_yellow_top"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/scard_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="名称"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/scard_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/storecard_date"
            android:textColor="#ffffff"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/scard_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/scard_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/storecard_price"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/scard_worth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/storecard_worth"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#d2d2d2" />

        <TextView
            android:id="@+id/scard_num"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/storecard_num"
            android:textColor="@color/blank"
            android:visibility="gone" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#d2d2d2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scard_buy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#d2d2d2" />

        <TextView
            android:id="@+id/scard_datelong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginLeft="10dp"
            android:text="@string/storecard_date"
            android:textColor="@color/blank" />

        <TextView
            android:id="@+id/scard_buynow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="去购买 >>"
            android:textColor="@color/style_color" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:background="#d2d2d2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scard_btm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/storecard_yellow_btm" >

        <TextView
            android:id="@+id/scard_cash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="right|center"
            android:text="@string/storecard_cash"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>